--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<span>I have read and accept the terms of use.</span>
 							</label>
 						</div>
-						<button type="submit" class="button">Sign up</button>
+						<button type="submit" class="button">Send Email</button>
 					</form>
 				</div>
 			</div>
@@ -157,8 +157,8 @@
 						</div>
 
 						<div class="input-group row">
-							<button type="submit" class="button button--sm">Send</button>
-							<button type="submit" class="button button--reject button--sm">Done</button>
+							<button type="submit" class="button button--sm">Subscribe</button>
+							<button type="submit" class="button button--reject button--sm">No, Thanks</button>
 						</div>
 					</form>
 				</div>
